Improved use of EF
