# Apps/ThePlaceToMeet.Wpf.App/OpenAPIs/swagger.json
@@ -225,22 +225,14 @@
         "operationId": "MeetingRoomGetByMaxAantalPersonen",
         "parameters": [
           {
-            "name": "maaxNumberOfPersons",
+            "name": "maxNumberOfPersons",
             "in": "query",
             "style": "form",
             "schema": {
               "type": "integer",
               "format": "int32"
             }
-          },
-          {
-            "name": "maxAantalPersonen",
-            "in": "path",
-            "required": true,
-            "style": "simple",
-            "schema": {
-              "type": "string"
-            }
+          }
           }
         ],
         "responses": {
